assets/css/main.css
/* ... */
@media screen and (max-width: 1280px) {
  #header nav a[href="#menu"] {
    padding-right: 4em !important;
  }
  #header nav a[href="#menu"]:last-child {
    padding-right: 4.5em !important;
  }
}
@media screen and (max-width: 736px) {
  #header {
    height: 2.75em;
    line-height: 2.75em;
    background-color: #000000 !important;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3) !important;
  }
  #header.alt {
    background-color: #000000 !important;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3) !important;
  }
  #header .logo {
    padding: 0 1em;
  }
  #header nav a {
    padding: 0 0.5em;
  }
  #header nav a:last-child {
    padding-right: 1em;
  }
  #header nav a[href="#menu"] {
    padding-right: 3.25em !important;
  }
  #header nav a[href="#menu"]:before, #header nav a[href="#menu"]:after {
    right: 0.75em;
  }
  #header nav a[href="#menu"]:last-child {
    padding-right: 4em !important;
  }
  #header nav a[href="#menu"]:last-child:before, #header nav a[href="#menu"]:last-child:after {
    right: 1.5em;
  }
}
@media screen and (max-width: 480px) {
  #header .logo span {
    display: none;
  }
  #header nav a[href="#menu"] {
    overflow: hidden;
    padding-right: 0 !important;
    text-indent: 5em;
    white-space: nowrap;
    width: 5em;
  }
  #header nav a[href="#menu"]:before, #header nav a[href="#menu"]:after {
    right: 0;
    width: inherit;
  }
  #header nav a[href="#menu"]:last-child:before, #header nav a[href="#menu"]:last-child:after {
    width: 4em;
    right: 0;
  }
}

/* Banner */
#banner {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  background-image: url("../../images/banner.jpg");
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  padding: 6em 0 2em 0;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-bottom: 0 !important;
  cursor: default;
  height: 60vh;
  margin-bottom: -3.25em;
  max-height: 32em;
  min-height: 22em;
  position: relative;
  top: -3.25em;
}
#banner:after {
  -moz-transition: opacity 2.5s ease;
  -webkit-transition: opacity 2.5s ease;
  -ms-transition: opacity 2.5s ease;
  transition: opacity 2.5s ease;
  -moz-transition-delay: 0.75s;
  -webkit-transition-delay: 0.75s;
  -ms-transition-delay: 0.75s;
  transition-delay: 0.75s;
  pointer-events: none;
  background-color: #000000;
  content: "";
  display: block;
  height: 100%;
  left: 0;
  opacity: 0.85;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1;
}
#banner h1 {
  font-size: 3.25em;
}
#banner > .inner {
  -moz-transition: opacity 1.5s ease, -moz-transform 0.5s ease-out, -moz-filter 0.5s ease, -webkit-filter 0.5s ease;
  -webkit-transition: opacity 1.5s ease, -webkit-transform 0.5s ease-out, -webkit-filter 0.5s ease, -webkit-filter 0.5s ease;
  -ms-transition: opacity 1.5s ease, -ms-transform 0.5s ease-out, -ms-filter 0.5s ease, -webkit-filter 0.5s ease;
  transition: opacity 1.5s ease, transform 0.5s ease-out, filter 0.5s ease, -webkit-filter 0.5s ease;
  padding: 0 !important;
  position: relative;
  z-index: 2;
}
#banner > .inner .image {
  display: none;
}
#banner > .inner header {
  width: auto;
}
#banner > .inner header > :first-child {
  width: auto;
}
#banner > .inner header > :first-child:after {
  max-width: 100%;
}
#banner > .inner .content {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin: 0 0 2em 0;
}
#banner > .inner .content > * {
  margin-right: 1.5em;
  margin-bottom: 0;
}
#banner > .inner .content > :last-child {
  margin-right: 0;
}
#banner > .inner .content p {
  font-size: 0.7em;
  font-weight: 600;
  letter-spacing: 0.25em;
  text-transform: uppercase;
}
#banner.major {
  height: 75vh;
  min-height: 30em;
  max-height: 50em;
}
#banner.major.alt {
  opacity: 0.75;
}
#banner.style1:after {
  background-color: #6fc3df;
}
#banner.style2:after {
  background-color: #8d82c4;
}
#banner.style3:after {
  background-color: #ec8d81;
}
#banner.style4:after {
  background-color: #e7b788;
}
#banner.style5:after {
  background-color: #8ea9e8;
}
#banner.style6:after {
  background-color: #87c5a4;
}
body.is-preload #banner:after {
  opacity: 1;
}
body.is-preload #banner > .inner {
  -moz-filter: blur(0.125em);
  -webkit-filter: blur(0.125em);
  -ms-filter: blur(0.125em);
  filter: blur(0.125em);
  -moz-transform: translateX(-0.5em);
  -webkit-transform: translateX(-0.5em);
  -ms-transform: translateX(-0.5em);
  transform: translateX(-0.5em);
  opacity: 0;
}
@media screen and (max-width: 1280px) {
  #banner {
    background-attachment: scroll;
  }
}
@media screen and (max-width: 736px) {
  #banner {
    padding: 5em 0 1em 0;
    height: auto;
    margin-bottom: -2.75em;
    max-height: none;
    min-height: 0;
    top: -2.75em;
  }
  #banner h1 {
    font-size: 2em;
  }
  #banner > .inner .content {
    display: block;
  }
  #banner > .inner .content > * {
    margin-right: 0;
    margin-bottom: 2em;
  }
  #banner.major {
    height: auto;
    min-height: 0;
    max-height: none;
  }
}
@media screen and (max-width: 480px) {
  #banner {
    padding: 6em 0 2em 0;
  }
  #banner > .inner .content p br {
    display: none;
  }
  #banner.major {
    padding: 8em 0 4em 0;
  }
}

/* Main */
#main {
  background-color: #000000;
}
#main > * {
  border-top: solid 1px rgba(212, 212, 255, 0.1);
}
#main > *:first-child {
  border-top: 0;
}
#main > * > .inner {
  padding: 4em 0 2em 0;
  margin: 0 auto;
  max-width: 65em;
  width: calc(100% - 6em);
}
@media screen and (max-width: 736px) {
  #main > * > .inner {
    padding: 3em 0 1em 0;
    width: calc(100% - 3em);
  }
}
#main.alt {
  background-color: transparent;
  border-bottom: solid 1px rgba(212, 212, 255, 0.1);
}
/* ... */

